# x-parser

./: .env.example  .gitignore  Dockerfile  MCP.md  README.md  main.py  pyproject.toml  requirements.txt
deploy/: .env.prod.example  .release.local.env.example  compose.prod.yaml
mcp_server/: __init__.py  server.py
scripts/: build-release-image.sh  deploy-prebuilt-release.sh  export-release-bundle.sh  release-prod.sh  service-release.conf
tests/: test_parser_content_quality.py  test_parser_contract_api.py  test_url_detector.py  test_utils.py
web/: __init__.py  app.py  parser_contract.py
web/templates/: index.html
xparser/: __init__.py  crawler.py  models.py  parser.py  url_detector.py  utils.py
